fix: flex wrap fix

--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -51,6 +51,7 @@
       height: 48px;
       background-color: #f5f5f5;
       margin-left: 40px;
+      flex-wrap: nowrap;
       position: absolute;
     }
 
